<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="204dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="90dp"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="147dp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="384dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="234dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/cell_border">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:inputType="text"
            android:textColorHint="@color/grey" />
    </TableRow>

    <TableRow
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="425dp"
        android:background="@drawable/cell_border">

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"/>
    </TableRow>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="330dp"
        android:onClick="onShow"
        android:textColor="@color/black"
        android:text="@string/show" />

    <Button
        android:id="@+id/signBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="179dp"
        android:backgroundTint="@color/cont"
        android:onClick="onSignin"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        app:cornerRadius="2dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="130dp"
        android:textColor="@color/black"
        android:text="@string/new_to" />

    <View
        android:id="@+id/divider2"
        android:layout_width="130px"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="270dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="135dp"
        android:background="?android:attr/listDivider" />

    <View
        android:id="@+id/divider"
        android:layout_width="130dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="136dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/createBtn"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/create"
        android:onClick="onCreate"
        android:text="@string/create"
        android:textColor="@color/black"
        app:cornerRadius="2dp" />

</RelativeLayout>